feat: Leaderboard now auto-fetches every 10 seconds from leaderboard api fix: Sorting is now based on score, then date_time on last solved
