# services/session-service/src/main/resources/api.yml
@@ -228,6 +228,12 @@ components:
           type: string
           format: date-time
           description: The timestamp when the escape-room session was created
+          example: "2025-04-06T14:20:00Z"
+        start_time:
+          nullable: true
+          type: string
+          format: date-time
+          description: The timestamp when the escape-room session went from open to start
           example: "2025-04-06T14:30:00Z"
         end_time:
           nullable: true
